src/styles/header.css
/* ==== Header ==== */

header {
  display: flex;
  justify-content: center;
  align-items: center;
  background: url(../images/header-bg.webp) center/cover no-repeat;
  padding: 2.5rem 1.25rem;
}

.header-img-container {
  position: relative;
  aspect-ratio: 2 / 3;
  max-width: 90vw;
  box-shadow:
    rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
  animation: enter-up 1s ease backwards;
}

@keyframes enter-up {
  from {
    transform: translateY(-110vw);
  }

  to {
    transform: translateY(0px);
  }
}

.profile-name {
  position: absolute;
  bottom: 0px;
  left: 52%;
  transform: translateX(-50%);
  font-size: clamp(1.25rem, 11vw, 3.75rem);
  color: hsl(0, 0%, 98%);
  font-family: 'Playfair Display', Georgia, 'Times New Roman', Times, serif;
  line-height: 1.15;
  font-weight: 500;
  text-shadow:
    0px 4px 3px rgba(0, 0, 0, 0.4),
    0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1);
}

.header-img-container img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.about-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;
}

.info-cont {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.social-links {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.social-links a {
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: var(--min-width);
  min-height: var(--min-height);
}

.social-links svg {
  width: 100%;
  max-width: 1.5rem;
  flex-shrink: 0;
}

/* ==== Tablets ==== */

@media (min-width: 36.875rem) {
  header {
    padding: 6.25rem 3.125rem;
  }

  header .social-links {
    display: none;
  }

  .header-img-container {
    width: 18.75rem;
    aspect-ratio: 1 / 1;
    
    margin-left: -3.75rem;
    margin-top: -120px;
    margin-right: 1.5rem;
    float: left;
    border-radius: 1rem;
    animation: enter-left 1s ease backwards;
  }

  .profile-name {
    transform: translate(15%);
    top: 0px;
    left: 48%;
    width: max-content;
    font-size: clamp(1.25rem, 7vw, 3.75rem);
  }

  .header-img-container img {
    border-radius: 1rem;
  }

  .about-section {
    display: block;
    width: clamp(30ch, 75vw, 80ch);
    padding: 1.25rem;
    background-color: white;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  }

  .info-cont {
    display: block;
  }

  .about-section h1 {
    text-align: center;
  }
}

/* ==== Desktop ==== */

@media (min-width: 64rem) {
  header .social-links {
    align-self: flex-end;
    display: flex;
  }

  .info-cont h1 {
    align-self: flex-start;
  }

  .about-section {
    display: flex;
    flex-direction: row;
    gap: 0;
    width: clamp(42ch, 75vw, 130ch);
  }

  .info-cont {
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }

  .header-img-container {
    flex-shrink: 0;
    display: flex;
    margin-top: -3.75rem;
    margin-bottom: -3.75rem;
    margin-left: -3.75rem;
  }

  .profile-name {
    transform: translate(-50%);
    top: auto;
    left: 50%;
    width: auto;
    font-size: clamp(1.75rem, 4.5vw, 3.75rem);
  }
}

@media (prefers-reduced-motion: reduce) {
  .header-img-container {
    animation: none !important;
  }
}

